--- a/arch/arm64/configs/lineageos_oneplus7pro_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus7pro_defconfig
@@ -65,6 +65,7 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
+CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -145,6 +146,7 @@ CONFIG_IPV6_MIP6=y
 CONFIG_IPV6_VTI=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
+CONFIG_NETLABEL=y
 CONFIG_NETFILTER=y
 CONFIG_SLA=y
 CONFIG_SLA_ALGO=y
@@ -197,7 +199,6 @@ CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
-# CONFIG_NETFILTER_XT_MATCH_SCTP is not set
 CONFIG_NETFILTER_XT_MATCH_SOCKET=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
@@ -233,7 +234,6 @@ CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_BROUTE=y
-CONFIG_IP_SCTP=y
 CONFIG_L2TP=y
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
@@ -745,14 +745,15 @@ CONFIG_PFK=y
 CONFIG_PFK_WRAPPED_KEY_SUPPORTED=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
+CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_DEVELOP is not set
 # CONFIG_SECURITY_SELINUX_AVC_STATS is not set
-CONFIG_SECURITY_SMACK=y
 CONFIG_SECURITY_YAMA=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_INIT_ON_FREE_DEFAULT_ON=y
 CONFIG_CRYPTO_RSA=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_XCBC=y
