defconfig: harden further
Signed-off-by: anupritaisno1 <www.anuprita804@gmail.com>

--- a/arch/arm64/configs/lineageos_oneplus7pro_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus7pro_defconfig
@@ -41,6 +41,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_SLAB_STAT_DEBUG=y
 # CONFIG_COMPAT_BRK is not set
+# CONFIG_SLAB_MERGE_DEFAULT is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_PROFILING=y
@@ -716,7 +717,6 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_PAGE_OWNER=y
 CONFIG_PAGE_OWNER_ENABLE_DEFAULT=y
-CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=-1
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_STACK_END_CHECK=y
@@ -727,6 +727,7 @@ CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_BUG_ON_DATA_CORRUPTION=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
+CONFIG_DEBUG_WX=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
@@ -743,6 +744,7 @@ CONFIG_CORESIGHT_TGU=y
 CONFIG_CORESIGHT_EVENT=y
 CONFIG_PFK=y
 CONFIG_PFK_WRAPPED_KEY_SUPPORTED=y
+CONFIG_SECURITY_DMESG_RESTRICT=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
